syntax = "proto3";

package devkit.v1;

import "buf/validate/validate.proto";
import "devkit/v1/client.proto";
message UserCreateUpdateRequest {
  int32 user_id = 1;  
  string user_name = 2 [
    (buf.validate.field).string.min_len = 2,
    (buf.validate.field).string.max_len = 200
  ];

  string user_image= 12 [
    (buf.validate.field).string.max_len = 200
  ]; 
  int32 tenant_id = 9;
  int32 user_security_level = 3;
  int32 user_type_id = 4 [(buf.validate.field).int32.gt = 0]; 
  string user_phone = 5 [(buf.validate.field).string.max_len = 50];
  string user_email = 6 [
    (buf.validate.field).string.email = true,
    (buf.validate.field).string.max_len = 200
  ]; 
  string user_password = 7 [(buf.validate.field).string.max_len = 200];  
  repeated int32 roles = 8 [(buf.validate.field).repeated = {
    unique: true
    max_items: 500
  }];
}
message AccountsSchemaUser {
  int32 user_id = 1;
  string user_name = 2; 
  string user_image= 22; 
  int32 tenant_id = 12;
  int32 user_security_level = 3; 
  int32 user_type_id = 4; 
  string user_phone = 5; 
  string user_email = 6; 
  string user_password = 7; 
  string created_at = 9; 
  string updated_at = 10; 
  string deleted_at = 11; 
}
message UserRole {
  int32 user_id = 1;
  int32 role_id = 2;
  string role_name= 3;
}
message AccountsSchemaUserView {
  int32 user_id         = 1; 
  string user_name      = 2; 
  string user_image = 22;
  int32 user_security_level = 23; 
  string user_email     = 3; 
  string user_phone     = 4; 
  int32 user_type_id    = 5;
  string user_type_name = 6;
  int32 tenant_id       = 7;
  string tenant_name    = 8;
  string created_at    = 9;
  string updated_at = 10;
  string deleted_at = 11;
  repeated UserRole roles  = 12;   
}

message UserCreateUpdateResponse {
  AccountsSchemaUser user = 1;
}
message UserDeleteRestoreRequest {
  repeated int32 records = 1;
}
message UserDeleteRestoreResponse {
  repeated AccountsSchemaUser records = 1;
}

message UserDeleteRequest {
  repeated int32 records = 1;
}
message UserDeleteResponse {
  repeated AccountsSchemaUser records = 1;
}
message UserListRow {
  int32 user_id         = 1; 
  string user_name      = 2; 
  string user_image = 22;
  int32 user_security_level = 23; 
  string user_email     = 3; 
  string user_phone     = 4; 
  int32 user_type_id    = 5;
  string user_type_name = 6;
  int32 tenant_id       = 7;
  string tenant_name    = 8;
  string created_at    = 9;
  string updated_at = 10;
  string deleted_at = 11;
  repeated int32 role_ids = 12;
  repeated UserRole roles  = 13;   
}
message UserListRequest {}
message UserListResponse {
  repeated UserListRow  records = 1;
  repeated UserListRow deleted_records = 2;
  AvailableOptions options = 3;
}
message UserListInputRequest {}
message UserListInputResponse {
  repeated SelectInputOption options = 1;
}
message UserTypeListInputRequest {}
message UserTypeListInputResponse {
  repeated SelectInputOption options = 1;
}

message UserFindForUpdateRequest {
  int32 record_id = 1;
}
message UserFindForUpdateResponse {
  UserCreateUpdateRequest request = 1;
}

message UserFindRequest {
  int32 record_id = 1;
}
message UserFindRow {
  int32 user_id         = 1; 
  string user_name      = 2; 
  string user_image = 22;
  int32 user_security_level = 23; 
  string user_email     = 3; 
  string user_phone     = 4; 
  int32 user_type_id    = 5;
  string user_type_name = 6;
  int32 permission_count = 13;
  int32 tenant_id       = 7;
  string tenant_name    = 8;
  string last_log_in    = 19;
  string created_at    = 9;
  string updated_at    = 10;
  string deleted_at    = 11;
  repeated UserLog  logs = 14;
  repeated UserRole roles  = 12;   
}
message UserSession {
  int32 user_id = 17;
  string session_key = 13;
  string ip_address = 2;
  bool is_blocked = 3;
  string created_at = 18;
  string access_token_expires_at = 9;  
  string refresh_token_expires_at = 10;
  string supabase_access_token_expires_at = 11;
  string supabase_refresh_token_expires_at = 12;
}

message UserLog {
  int32 user_id = 1;
  string log_title = 2;  
  string permission_name = 3;  
  string status_code = 4; 
  string action_type = 8; 
  string api_error_message = 5; 
  int32 record_id = 6; 
  string creadd_at = 7;
}
message UserFindResponse {
  AvailableOptions options = 1;
  UserFindRow  record = 2;
  repeated UserSession  sessions = 3;
}

message UserPermissionListInputRequest {
}
message UserPermissionListInputResponse {
  repeated SelectInputOptionWithGroup   options  = 1;
}

