syntax = "proto3";
package devkit.v1;

import "google/protobuf/descriptor.proto";

// Define a custom option to indicate whether authentication should be skipped.
extend google.protobuf.MethodOptions {
  bool skip_authentication = 50001;
  bool skip_authorization = 50002;
  string permission_group = 50003;
  string permission_name = 60003;
}
